# proger

./: CMakeLists.txt  README.md  staticdata.txt
res/: info.txt
source/: button.cpp  button.h  buttonManager.cpp  buttonManager.h  calendar.cpp  calendar.h  dictionary.cpp  dictionary.h  drawable.cpp  drawable.h  drawableObjects.cpp  drawableObjects.h  goal.cpp  goal.h  magicBox.h  main.cpp  messages.cpp  messages.h  notificator.cpp  notificator.h  player.cpp  player.h  staticData.cpp  staticData.h  wallClock.cpp  wallClock.h  windowManager.cpp  windowManager.h
